# tutorial_for_beginners

./: .gitignore  README.md  TUTORIAL_REPO_GUIDE.md  run_analysis.R
00_orientation/: how_this_repo_works.md
01_git_basics/: essential_commands.md
02_multi_pc_workflow/: conflict_resolution.md  home_vs_work.md  switching_machines.md
03_ssh_setup/: ssh_step_by_step.md
04_r_basics/: Makefile  README.md  run_all.R
04_r_basics/analysis/: 01_t_test_independent.R  02_paired_t_test.R  03_wilcoxon_rank_sum.R  04_fisher_exact.R  05_chi_square.R  06_anova_oneway.R  07_correlation.R  08_linear_regression.R  08_linear_regression.RData  09_logistic_regression.R  10_kaplan_meier.R  11_cox_regression.R  12_mixed_effects_lmm.R  (+1 more)
05_python_basics/: README.md  requirements.txt
05_python_basics/05_enhancements/: ENVIRONMENT.md  README.md  dicom_series_loader.py  preprocessing_skimage.py  pyproject.toml  resample_isotropic_sitk.py  window_level_qc.py
05_python_basics_notebooks/: 02_python_core_numpy_basics.ipynb  02_python_core_pandas_basics.ipynb  03_plotting_matplotlib.ipynb  04_imaging_dicom_basics.ipynb  04_imaging_nifti_basics.ipynb  04_imaging_simple_segmentation.ipynb  05_end_to_end_imaging_demo.ipynb
git/: GIT_ADVANCED_REFERENCE.md  GIT_BRANCHING_GUIDE.md  README.md
old_repo/: .gitignore  README.md
python/: README.md  config.example.yaml  requirements.txt  run_analysis.py
r/: README.md
results/: lmm_fitted_model.rds  lmm_model_summary.txt  paired_t_test_results.txt  pearson_correlation.rds  spearman_correlation.rds
windows_helpers/: Build.ps1  README.md
(+35 files in other folders)
